--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-NAMEname: ci
+MENAMEname: ci
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
   build: 
     runs-on: ubuntu-latest
     jobs:
-  build: mvn clean install package
+  build: 
     runs-on: ubuntu-latest
     steps:
       -
@@ -19,7 +19,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_jaji9993 }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set up Docker Buildx
